--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -2,6 +2,7 @@
 	Testing
 	{{ nametest }}
 	<div ng-repeat="producto in productos">
+	test
 		 <h2>{{producto.nombreProducto}}<br>{{producto.precioProducto}}</h2>
             <p>
             Descripción: {{producto.descripcionProducto}}<br>
