--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -1,6 +1,12 @@
 <div class="container">
 	Testing
 	{{ nametest }}
+	<div ng-repeat="testingg in testing">
+	test
+		 {{testingg.nombre}}
+        
+
+	</div>
 	<div ng-repeat="producto in productos">
 	test
 		 <h2>{{producto.nombreProducto}}<br>{{producto.precioProducto}}</h2>
