--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -1,6 +1,11 @@
 <div class="container">
 	Testing
 	{{ nametest }}
+	sdfsafddaffsdfdasfdsfsd whyyyyyyyyyyyyyyyyy
+	<div ng-repeat="(name, age) in {'adam':10, 'amalie':12}">
+		{{name}}
+		{{age}}
+	</div>
 	<div ng-repeat="testingg in testing">
 	test
 		 {{testingg.nombre}}
