--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -1,13 +1,12 @@
 <div class="container">
-	
-	Productos Tingeso
-	<div style="padding:20px 0px 60px 0px">
+	<div class="class="gridListdemoBasicUsage"">
+	<h1>Productos Tingeso</h1>
+
       <span class="col-md-3">
 
   	<a id="boton_agregar" class="btn btn-large btn-info" href="#/new">Agregar producto</a>
 
       </span>
-    </div>
 
 	<div class='md-padding' layout="row" layout-wrap>
         <md-card style="width: 300px;" ng-repeat="producto in productos">
@@ -24,5 +23,5 @@
           </md-card-content>
         </md-card>
     </div>
-    
+    </div>
 </div>
