--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -1,12 +1,13 @@
 <div class="container">
 	<div class="class="gridListdemoBasicUsage"">
 	<h1>Productos Tingeso</h1>
-
+	<div style="padding:20px 0px 60px 0px">
       <span class="col-md-3">
 
   	<a id="boton_agregar" class="btn btn-large btn-info" href="#/new">Agregar producto</a>
 
       </span>
+    </div>
 
 	<div class='md-padding' layout="row" layout-wrap>
         <md-card style="width: 300px;" ng-repeat="producto in productos">
