--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -2,10 +2,39 @@
     
     <div class="form-group">
       <label>Codigo Producto</label>
-      <input type="text" name="codigoProducto" class="form-control" 
+      <input id="codigo_producto" type="text" name="codigoProducto" class="form-control" 
         ng-model="newProducto.codigoProducto">
     </div>
-
+  <div class="form-group">
+      <label>Nombre Producto</label>
+      <input id="nombre_producto" type="text" name="nombreProducto" class="form-control" 
+        ng-model="newProducto.nombreProducto">
+    </div>
+    <div class="form-group">
+      <label>precio Producto</label>
+      <input id="precio_producto" type="text" name="precioProducto" class="form-control" 
+        ng-model="newProducto.precioProducto">
+    </div>
+    <div class="form-group">
+      <label>descripcion Producto</label>
+      <input id="descripcion_producto" type="text" name="descripcionProducto" class="form-control" 
+        ng-model="newProducto.descripcionProducto">
+    </div>
+    <div class="form-group">
+      <label>nombreAnunciante Producto</label>
+      <input id="nombreAnunciante_producto" type="text" name="nombreAnuncianteProducto" class="form-control" 
+        ng-model="newProducto.nombreAnuncianteProducto">
+    </div>
+<div class="form-group">
+      <label>telefonoAnunciante Producto</label>
+      <input id="telefonoAnunciante_producto" type="text" name="telefonoAnuncianteProducto" class="form-control" 
+        ng-model="newProducto.telefonoAnuncianteProducto">
+    </div>
+<div class="form-group">
+      <label>cuidadAnunciante Producto</label>
+      <input id="cuidadAnunciante_producto" type="text" name="cuidadAnuncianteProducto" class="form-control" 
+        ng-model="newProducto.cuidadAnuncianteProducto">
+    </div>
 
     <div class="form-group">
       <button type="submit" class="btn btn-danger" ng-click="submit(newProducto)">Submit</button>
@@ -15,3 +44,6 @@
 
 JSON GENERADO:
   <pre>{{ newProducto | json }}</pre>
+
+
+
