--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -12,7 +12,7 @@
     </div>
     <div class="form-group">
       <label>precio Producto</label>
-      <input id="precio_producto" type="text" name="precioProducto" class="form-control" 
+      <input id="precio_producto" type="number" name="precioProducto" class="form-control" 
         ng-model="newProducto.precioProducto">
     </div>
     <div class="form-group">
