--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -31,9 +31,9 @@
         ng-model="newProducto.telefonoAnuncianteProducto">
     </div>
 <div class="form-group">
-      <label>cuidadAnunciante Producto</label>
-      <input id="cuidadAnunciante_producto" type="text" name="cuidadAnuncianteProducto" class="form-control" 
-        ng-model="newProducto.cuidadAnuncianteProducto">
+      <label>cuidad Producto</label>
+      <input id="cuidad_producto" type="text" name="cuidadProducto" class="form-control" 
+        ng-model="newProducto.cuidadProducto">
     </div>
 
     <div class="form-group">
