--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -20,6 +20,31 @@
       <input id="descripcion_producto" type="text" name="descripcionProducto" class="form-control" 
         ng-model="newProducto.descripcionProducto">
     </div>
+
+    <div flow-init="{target: '/upload'}"
+     flow-files-submitted="$flow.upload()"
+     flow-file-success="$file.msg = $message">
+<div>
+    <div class="thumbnail" ng-hide="$flow.files.length">
+      <img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&text=no+image" />
+    </div>
+    <div class="thumbnail" ng-show="$flow.files.length">
+      <img flow-img="$flow.files[0]" />
+    </div>
+    <div>
+      <a href="#" class="btn" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Select image</a>
+      <a href="#" class="btn" ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Change</a>
+      <a href="#" class="btn btn-danger" ng-show="$flow.files.length"
+         ng-click="$flow.cancel()">
+        Remove
+      </a>
+    </div>
+    <p>
+      Only PNG,GIF,JPG files allowed.
+    </p>
+  </div>
+</div>
+
     <div class="form-group">
       <label>nombreAnunciante Producto</label>
       <input id="nombreAnunciante_producto" type="text" name="nombreAnuncianteProducto" class="form-control" 
