--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -22,27 +22,21 @@
     </div>
 
     <div flow-init="{target: '/upload'}"
-     flow-files-submitted="$flow.upload()"
-     flow-file-success="$file.msg = $message">
-<div>
-    <div class="thumbnail" ng-hide="$flow.files.length">
-      <img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&text=no+image" />
-    </div>
-    <div class="thumbnail" ng-show="$flow.files.length">
+      flow-files-submitted="$flow.upload()"
+      flow-file-success="$file.msg = $message">
+    <div ng-show="$flow.files.length">
       <img flow-img="$flow.files[0]" />
     </div>
     <div>
-      <a href="#" class="btn" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Select image</a>
-      <a href="#" class="btn" ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Change</a>
-      <a href="#" class="btn btn-danger" ng-show="$flow.files.length"
+      <input  class="btn" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
+      <input  class="btn" ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
+      <input class="btn btn-danger" ng-show="$flow.files.length"
          ng-click="$flow.cancel()">
-        Remove
-      </a>
     </div>
     <p>
       Only PNG,GIF,JPG files allowed.
     </p>
-  </div>
+
 </div>
 
     <div class="form-group">
