--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -20,7 +20,8 @@
       <input id="descripcion_producto" type="text" name="descripcionProducto" class="form-control" 
         ng-model="newProducto.descripcionProducto">
     </div>
-
+<div class="form-group">
+      <label>Imagen</label>
     <div flow-init="{target: '/upload'}"
       flow-files-submitted="$flow.upload()"
       flow-file-success="$file.msg = $message">
@@ -28,17 +29,12 @@
       <img flow-img="$flow.files[0]" />
     </div>
     <div>
-      <input  class="btn" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
-      <input  class="btn" ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
-      <input class="btn btn-danger" ng-show="$flow.files.length"
-         ng-click="$flow.cancel()">
+      <input  id="boton_imagen" value="Seleccionar Imagen" class="btn" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
+      <input  value="Cambiar Imagen" class="btn" ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
     </div>
-    <p>
-      Only PNG,GIF,JPG files allowed.
-    </p>
 
+  </div>
 </div>
-
     <div class="form-group">
       <label>nombreAnunciante Producto</label>
       <input id="nombreAnunciante_producto" type="text" name="nombreAnuncianteProducto" class="form-control" 
