--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -29,8 +29,8 @@
       <img flow-img="$flow.files[0]" />
     </div>
     <div>
-      <input  id="boton_imagen" value="Seleccionar Imagen" class="btn" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
-      <input  value="Cambiar Imagen" class="btn" ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
+      <input  id="boton_imagen" value="Seleccionar Imagen" class="btn btn-large btn-info" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
+      <input  value="Cambiar Imagen" class="btn btn-large btn-info" ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">
     </div>
 
   </div>
