--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -1,4 +1,6 @@
-<form name="productoForm" novalidate>
+<form name="productoForm" novalidate flow-init="{target: '/upload'}"
+      flow-files-submitted="$flow.upload()"
+      flow-file-success="$file.msg = $message">
     
     <div class="form-group">
       <label>Codigo Producto</label>
@@ -22,9 +24,7 @@
     </div>
 <div class="form-group">
       <label>Imagen</label>
-    <div flow-init="{target: '/upload'}"
-      flow-files-submitted="$flow.upload()"
-      flow-file-success="$file.msg = $message">
+    <div >
     <div ng-show="$flow.files.length">
       <img flow-img="$flow.files[0]" />
     </div>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group">
-      <button type="submit" class="btn btn-danger" ng-click="submit(newProducto)">Submit</button>
+      <button type="submit" class="btn btn-danger" ng-click="submit(newProducto,$flow.files[0])">Submit</button>
     </div>
     
   </form>
