--- a/frontend/views/productoForm.html
+++ b/frontend/views/productoForm.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group">
-      <button type="submit" class="btn btn-danger" ng-click="submit(newProducto,$flow)">Submit</button>
+      <button type="submit" class="btn btn-danger" ng-click="submit(newProducto)">Submit</button>
     </div>
     
   </form>
