--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -11,7 +11,7 @@
 
 	<div class='md-padding' layout="row" layout-wrap>
         <md-card style="width: 300px;" ng-repeat="producto in productos">
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" width="150" class="md-card-image" alt="user avatar">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=45&txt=Imagen+no+disponible&w=350&h=150&txttrack=0" width="150" class="md-card-image" alt="user avatar">
           <md-card-content>
             <h2>{{producto.nombreProducto}}</h2>
             <p>
