--- a/backend/ant/reports/TEST-ProductoTest.xml
+++ b/backend/ant/reports/TEST-ProductoTest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<testsuite errors="1" failures="0" hostname="FranciscoVB" name="junit.ProductoTest" skipped="0" tests="1" time="0.186" timestamp="2016-12-05T03:31:31">
+<testsuite errors="1" failures="0" hostname="FranciscoVB" name="ProductoTest" skipped="0" tests="1" time="0.376" timestamp="2016-12-05T04:08:27">
   <properties>
     <property name="ant.project.invoked-targets" value="run" />
     <property name="java.runtime.name" value="Java(TM) SE Runtime Environment" />
@@ -67,7 +67,7 @@
     <property name="sun.desktop" value="gnome" />
     <property name="sun.cpu.isalist" value="" />
   </properties>
-  <testcase classname="junit.ProductoTest" name="initializationError" time="0.017">
+  <testcase classname="ProductoTest" name="initializationError" time="0.053">
     <error message="org/hamcrest/SelfDescribing" type="java.lang.NoClassDefFoundError">java.lang.NoClassDefFoundError: org/hamcrest/SelfDescribing
 	at java.lang.ClassLoader.defineClass1(Native Method)
 	at java.lang.ClassLoader.defineClass(ClassLoader.java:763)
