--- a/backend/ant/reports/TEST-ProductoTest.xml
+++ b/backend/ant/reports/TEST-ProductoTest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<testsuite errors="1" failures="0" hostname="FranciscoVB" name="ProductoTest" skipped="0" tests="1" time="0.376" timestamp="2016-12-05T04:08:27">
+<testsuite errors="0" failures="0" hostname="FranciscoVB" name="ProductoTest" skipped="0" tests="1" time="0.142" timestamp="2016-12-05T04:15:42">
   <properties>
     <property name="ant.project.invoked-targets" value="run" />
     <property name="java.runtime.name" value="Java(TM) SE Runtime Environment" />
@@ -67,16 +67,7 @@
     <property name="sun.desktop" value="gnome" />
     <property name="sun.cpu.isalist" value="" />
   </properties>
-  <testcase classname="ProductoTest" name="initializationError" time="0.053">
-    <error message="org/hamcrest/SelfDescribing" type="java.lang.NoClassDefFoundError">java.lang.NoClassDefFoundError: org/hamcrest/SelfDescribing
-	at java.lang.ClassLoader.defineClass1(Native Method)
-	at java.lang.ClassLoader.defineClass(ClassLoader.java:763)
-	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
-	at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
-Caused by: java.lang.ClassNotFoundException: org.hamcrest.SelfDescribing
-	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
-</error>
-  </testcase>
+  <testcase classname="ProductoTest" name="unitarytestSucess" time="0.005" />
   <system-out><![CDATA[]]></system-out>
   <system-err><![CDATA[]]></system-err>
 </testsuite>
