--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -11,7 +11,7 @@
 
 	<div class='md-padding' layout="row" layout-wrap>
         <md-card style="width: 300px;" ng-repeat="producto in productos">
-          <img src="http://lorempixel.com/350/150/" width="150" class="md-card-image" alt="user avatar">
+          <img src="http://lorempixel.com/350/150/cats/" width="150" class="md-card-image" alt="user avatar">
           <md-card-content>
             <h2>{{producto.nombreProducto}}</h2>
             <p>
